<resources>
    <string name="app_name">D&#178; Brain</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dimmer">DimmerActivity</string>
    <string name="action_rename_scene">Rename</string>
    <string name="action_delete_scene">Delete</string>
    <string name="action_save_scene">Save</string>
    <string name="empty_scene">You have not created any scene.\n To Add New Scene</string>
    <string name="empty_notification_list">You Have No Notifications</string>
    <string name="empty_schedulers_list">You Have Not Added Any Scheduler</string>
    <string name="empty_favourites_list">You Have Not Added Any Favourites</string>
    <string name="empty_sensors_list">You Have No Sensors</string>
    <string name="empty_machines_list">You Have Not Added Any Machine</string>
    <string name="empty_scehdulers_list">You Have Not Added Any Scheduler</string>
    <string name="about_us1">Brings the Power of Convenience in Your Hand</string>
    <string name="about_us2">D&#178; Brain is the Futuristic Home &amp; Industry Automation App through which the control to your electrical appliances is just a click away!</string>
    <string name="contact_us_website">Website: www.d2brain.com</string>
    <string name="contact_us_email">Email: info@dsquareelectronics.com</string>
    <string name="contact_us_address">Address: B-261 Devdeep Nagar, Opp. Sales India Showroom, Old Padra Road, Vadodara-390020</string>
    <string name="contact_us_phone">Phone Number: +91 99244 83382</string>

    <string name="rename_text">Rename</string>
    <string name="action_add_to_scene">Add To Scene</string>
    <string name="action_add_to_favorite">Add To Favourite</string>
    <string name="action_add_to_scheduler">Add To Scheduler</string>
    <string name="power_off_text">Power is Off. Please switch on the main switch</string>
    <string name="all_machines_off_text">All Machines Are Inactive</string>
    <string name="click_here">Click Here To Active Machine(s)</string>
    <string name="empty_switch_list">No Switches Found</string>
    <string name="machine_unavailable">This Machine Is Unavailable</string>

</resources>
